--- a/disasteraid-auth-frontend/public/index.html
+++ b/disasteraid-auth-frontend/public/index.html
@@ -41,6 +41,9 @@
       crossorigin=""
     ></script>
     
+    <!-- Socket.IO client for realtime updates -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-e+K7l8k7e1w8Wk4oI6g3m0H9wxgq8b7n5p4o2QKJrQW1i9+3l7f2qzv1b2mF3m2T" crossorigin="anonymous"></script>
+    
     <title>DisasterAid - Crisis Relief Platform</title>
   </head>
   <body>
